--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,6 @@
   background-color: rgba(255, 255, 255, 0.7); /* Aquí se define un color de fondo blanco con una opacidad del 70% */
   box-shadow: 2px 2px 4px rgba(0, 119, 255, 0.3); /* Aquí se agrega una sombra con un desplazamiento de 2px hacia la derecha y hacia abajo, un radio de 4px y un color negro con una opacidad del 30% */
   text-align: center; /* Aquí se centra el contenido del cuadro */
-  width: auto px;
 
 }
 
@@ -21,7 +20,6 @@
   text-align: center; /* Aquí se centra el contenido del cuadro */
   width: auto; /* Aquí se establece el ancho de la caja al 100% del ancho de su contenedor */
   margin: 0 auto; /* Aquí se centra la caja horizontalmente en su contenedor */
-  width: auto px;
 
 }
 
@@ -34,7 +32,6 @@
   width: 100%; /* Aquí se establece el ancho de la caja al 100% del ancho de su contenedor */
   max-width: 1800px; /* Aquí se establece el ancho máximo de la caja a 800 píxeles */
   margin: 0 auto; /* Aquí se centra la caja horizontalmente en su contenedor */
-  width: auto px;
 
 }
 
@@ -69,7 +66,6 @@ h1 {
     color: #000000; 
     font-size: 150%;
     box-shadow: 4px 8px 8px rgba(255, 0, 0, 0.3); /* Aquí se agrega una sombra con un desplazamiento de 2px hacia la derecha y hacia abajo, un radio de 4px y un color negro con una opacidad del 30% */
-    width: auto px;
 
 
   }
@@ -130,7 +126,7 @@ h1 {
     margin-top: 10px;
     margin-right: 10px;
     margin-bottom: 200px;
-    margin-left: 10px;
+    margin-left: 50px;
   }
   
 
@@ -164,11 +160,11 @@ p {
 }
 
 .barra {
-  width: infinite;
-  height: 50px;
+  width: 100;
+  height: 70px;
   background-color: #0077CC;
-  border-radius: 10px;
-  box-shadow: 0px 0px 5px #888888;
+  border-radius: 0px;
+  box-shadow: 10px 10px 5px #888888;
 }
 
 
